test/org/midica/testfiles/failing/eff-flow-rpn-without-num.midica
INCLUDE inc/instruments.midica


0: rpn.set(50)
